--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apexcharts": "^4.4.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "firebase": "^11.2.0",
     "framer-motion": "^11.16.4",
     "next": "15.0.3",
@@ -26,6 +27,7 @@
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
