--- a/package.json
+++ b/package.json
@@ -19,14 +19,20 @@
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "firebase": "^11.2.0",
+    "firebase-admin": "^13.2.0",
     "framer-motion": "^11.16.4",
+    "lodash": "^4.17.21",
     "next": "15.0.3",
+    "node-polyfill-webpack-plugin": "^4.1.0",
+    "nookies": "^2.5.2",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "swr": "^2.3.3",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
@@ -34,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/webpack": "^5.28.5",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
