--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/page.tsx"
+    "app/page.tsx",
+    "next.config.js"
   ],
   "exclude": ["node_modules"]
 }
